[package]
name = "octorcrab_github_managger_tst_no1"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "octorcrab_github_managger_tst_no1_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

#bussines logic dependencies
nipper = "0.1.9"
octocrab = "0.49.5"
tokio = {version = "1", features = ["full"] }
base64 = "0.22"
anyhow = "1.0"
dotenvy = "0.15"

